--- a/workshop/3/fasit/main.yml
+++ b/workshop/3/fasit/main.yml
@@ -18,19 +18,19 @@ jobs:
         password: ${{ secrets.DIGITAL_OCEAN_TOKEN }}
 
     - name: Build latest
-      run: docker build -t registry.digitalocean.com/olsen/go-app:$(echo $GITHUB_SHA | head -c7) .
+      run: docker build -t registry.digitalocean.com/containers/go-app:$(echo $GITHUB_SHA | head -c7) .
 
     - name: Push to Digital Ocean Registry
-      run: docker push registry.digitalocean.com/olsen/go-app:$(echo $GITHUB_SHA | head -c7)
+      run: docker push registry.digitalocean.com/containers/go-app:$(echo $GITHUB_SHA | head -c7)
 
     - name: Set up kubectl
       uses: matootie/dokube@v1.3.4
       with:
         personalAccessToken: ${{ secrets.DIGITAL_OCEAN_TOKEN }}
-        clusterName: k8s-miles
+        clusterName: k8s-bergen
 
     - name: Update deployment file
-      run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/olsen/go-app:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
+      run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/containers/go-app:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
 
     - name: Deploy to Kubernetes
       run: kubectl apply -f config/deployment.yml
