--- a/workshop/3/fasit/ingress.yml
+++ b/workshop/3/fasit/ingress.yml
@@ -4,9 +4,9 @@ metadata:
   name: go-ingress
   namespace: apps
   annotations:
-    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
+  ingressClassName: nginx
   rules:
   - host: "app.motoren.site"
     http:
