--- a/workshop/1/.github/workflows/main.yml
+++ b/workshop/1/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and push container to docker repo olsen @ DO
+name: Build and push container to docker repo containers @ DO
 on:
   push:
     branches:
@@ -18,6 +18,6 @@ jobs:
         password: ${{ secrets.DIGITAL_OCEAN_TOKEN }}
 
     - name: Build latest
-      run: docker build -t registry.digitalocean.com/olsen/YOUR_APP:$(echo $GITHUB_SHA | head -c7) .
+      run: docker build -t registry.digitalocean.com/containers/YOUR_APP:$(echo $GITHUB_SHA | head -c7) .
 
-    ##Add step for pusing to registry.digitalocean.com/olsen
+    ##Add step for pusing to registry.digitalocean.com/containers
