--- a/workshop/1/.github/workflows/main.yml
+++ b/workshop/1/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and push container to docker repo olsen @ DO
+name: Build and push container to docker repo containers @ DO
 on:
   push:
     branches:
